Fix menu btn on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ header {
   top: 0;
   width: 100%;
   z-index: 1000;
-  border-bottom: 1px solid var(--clr-neutral-300);
+  border-bottom: 1px solid rgb(196, 196, 196);
 }
 
 .header_wrapper {
@@ -192,7 +192,7 @@ header {
 main {
   background-color: var(--clr-neutral-200);
   padding: 96px 16px 64px 16px;
-  border-bottom: 1px solid var(--clr-neutral-400);
+  border-bottom: 1px solid rgb(196, 196, 196);
 }
 
 h1 {
@@ -363,7 +363,7 @@ main p .highlight-gold::before {
   main {
     background-color: var(--clr-neutral-200);
     padding: 96px 16px 64px 16px;
-    border-bottom: 1px solid var(--clr-neutral-400);
+    border-bottom: 1px solid rgb(196, 196, 196);
   }
 
   .main_wrapper {
@@ -960,7 +960,7 @@ footer {
 .toggle-button .bar {
   height: 3px;
   width: 100%;
-  background-color: white;
+  background-color: var(--clr-neutral-300);
   border-radius: 10px;
 }
 
